Fix the content overflow in main

--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ body {
 .container {
     display: grid;
     grid-template-columns: 1fr 3fr 1fr;
-    grid-template-rows: auto minmax(10px, 100vh) auto;
+    grid-template-rows: auto auto auto;
     grid-template-areas: "header header header" ". main ." "footer footer footer";
 }
 
@@ -38,7 +38,7 @@ body {
     .container {
         display: grid;
         grid-template-columns: auto;
-        grid-template-rows: 1fr minmax(10px, 100vh) auto;
+        grid-template-rows: 1fr auto auto;
         grid-template-areas: "header" "main" "footer";
     }
     main {
